@@ -1,3 +1,7 @@
+2001-11-19  Kenichi OKADA  <okada@opaopa.org>
+
+	* smtp.el (smtp-find-server): Fix.
+
 2001-11-18  Kenichi OKADA  <okada@opaopa.org>
 
 	* smtp.el (smtp-send-by-myself): Fix.
